--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                                     </div>
                                 </div>
                             </li>
+
                             <li class="animate-box ">
                                 <div class="timeline-badge " style="background-image:url(images/rocket.png); "></div>
                                 <div class="timeline-panel ">
@@ -224,6 +225,35 @@
                                     </div>
                                 </div>
                             </li>
+
+                            <li class="timeline-inverted animate-box ">
+                                <div class="timeline-badge " style="background-image:url(images/rocket.png); "></div>
+                                <div class="timeline-panel ">
+                                    <div class="timeline-heading ">
+                                        <h3 class="timeline-title ">GitHub introduction session</h3>
+                                        <span class="date ">September 05, 2021</span>
+                                    </div>
+                                    <div class="timeline-body ">
+
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li class="animate-box ">
+                                <div class="timeline-badge " style="background-image:url(images/rocket.png); "></div>
+                                <div class="timeline-panel ">
+                                    <div class="timeline-heading ">
+                                        <h3 class="timeline-title ">Software testing session</h3>
+                                        <span class="date ">September 12, 2021</span>
+                                    </div>
+                                    <div class="timeline-body ">
+
+                                    </div>
+                                </div>
+                            </li>
+
+
+
                             <li class="timeline-inverted animate-box ">
                                 <div class="timeline-badge " style="background-image:url(images/rocket.png); "></div>
                                 <div class="timeline-panel ">
@@ -237,6 +267,8 @@
                                     </div>
                                 </div>
                             </li>
+
+
                             <li class="animate-box ">
                                 <div class="timeline-badge " style="background-image:url(images/rocket.png); "></div>
                                 <div class="timeline-panel ">
@@ -273,35 +305,33 @@
                                     <div class="testimony-slide active text-left ">
                                         <h4>1st Week</h4>
                                         <ul>
-                                            <li>Create 1 min presentation for introduce idea with including
-                                                identified
-                                                tech stack.</li>
-                                            <li>Publish high level architecture and UI wireframes.</li>
+                                            <li>Make a 1 min presentation to present the problem you address, your
+                                                approach and technology which will be adopted</li>
+                                            <li>Design high level architecture and UI wireframes for the system.</li>
                                         </ul>
                                     </div>
                                     <div class="testimony-slide active text-left ">
                                         <h4>2nd Week</h4>
                                         <ul>
-                                            <li>Separate modules and allocate modules,tasks to members via any project
+                                            <li>Separate modules and allocate tasks to the members via any project
                                                 management platform (Clickup, Jira, trello).</li>
                                             <li>Initiate github repository and the version controlling environment.</li>
                                             <li>Initiate developments and define the first releasing module.</li>
-                                            <li>Participate in a 1 hour unit testing session</li>
                                         </ul>
                                     </div>
                                     <div class="testimony-slide active text-left ">
                                         <h4>3rd Week</h4>
                                         <ul>
-                                            <li>Release first working module via github pages and complete the first
-                                                unit test relevant to that module</li>
-                                            <li>Create a LinkedIn post by uploading a selfie with team members and
-                                                mentors.</li>
+                                            <li>Complete first module including relevant unit testing and publish duly
+                                                completed module through GitHub.</li>
+                                            <li>Take a screenshot of your scrum meeting with your members and mentors
+                                                and post in LinkedIn.</li>
                                         </ul>
                                     </div>
                                     <div class="testimony-slide active text-left ">
                                         <h4>4th Week</h4>
                                         <ul>
-                                            <li>Complete 40% of modules and release them via github pages.</li>
+                                            <li>Complete 40% of the system and publish them through GitHub.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -310,39 +340,36 @@
                                     <div class="testimony-slide active text-left ">
                                         <h4>5th Week</h4>
                                         <ul>
-                                            <li>Create 1 min presentation for introduce idea with including
-                                                identified
-                                                tech stack.</li>
-                                            <li>Publish high level architecture and UI wireframes.</li>
+                                            <li>Complete 70% of the system and publish them through GitHub.</li>
+                                            <li>Tea with Brotherhood Stack.
+                                                <ul>
+                                                    <li>Have discussion with another team who follows the same tech
+                                                        stack.</li>
+                                                    <li>Take a screenshot of party and post in LinkedIn.</li>
+                                                </ul>
+                                            </li>
                                         </ul>
                                     </div>
                                     <div class="testimony-slide active text-left ">
                                         <h4>6th Week</h4>
                                         <ul>
-                                            <li>Separate modules and allocate modules,tasks to members via any project
-                                                management platform (Clickup, Jira, trello).</li>
-                                            <li>Initiate github repository and the version controlling environment.</li>
-                                            <li>Initiate developments and define the first releasing module.</li>
-                                            <li>Participate in a 1 hour unit testing session</li>
+                                            <li>Complete 100% of the system and publish them through GitHub</li>
                                         </ul>
                                     </div>
                                     <div class="testimony-slide active text-left ">
                                         <h4>7th Week</h4>
                                         <ul>
-                                            <li>Create 1 min presentation for introduce idea with including
-                                                identified
-                                                tech stack.</li>
-                                            <li>Publish high level architecture and UI wireframes.</li>
+                                            <li>Integrate modules and test the system.</li>
+                                            <li>Create a system testing report via github.</li>
                                         </ul>
                                     </div>
                                     <div class="testimony-slide active text-left ">
                                         <h4>8th Week</h4>
                                         <ul>
-                                            <li>Separate modules and allocate modules,tasks to members via any project
-                                                management platform (Clickup, Jira, trello).</li>
-                                            <li>Initiate github repository and the version controlling environment.</li>
-                                            <li>Initiate developments and define the first releasing module.</li>
-                                            <li>Participate in a 1 hour unit testing session</li>
+                                            <li>Publish duly completed version through GitHub.</li>
+                                            <li>Make 1 min video to introduce your program.</li>
+                                            <li>Celebrate your success with team members and mentors. Do not forget to
+                                                share your story via LinkedIn.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -366,47 +393,22 @@
                     <div class="row ">
                         <div class="col-md-12 animate-box ">
                             <div class="wrap-testimony ">
-
-                                <div class="owl-carousel-fullwidth ">
-                                    <div class="item ">
-                                        <div class="testimony-slide active text-center ">
-                                            <blockquote>
-                                                <p>CodeRush 2020 is exclusive for the undergraduates of the Faculty of
-                                                    Information Technology.</p><br>
-                                                <p>The competition will be in action for 48 hours from the starting
-                                                    moment.</p><br>
-                                                <p>A team can only log into Hackerrank utilising the account and
-                                                    password sent by the Organising Committee.</p>
-                                            </blockquote>
-                                        </div>
+                                <div class="item ">
+                                    <div class="testimony-slide active text-left ">
+                                        <h4>Team Details</h4>
+                                        <ul>
+                                            <li>Single team should include a minimum of 3 members and maximum 4 members.
+                                            </li>
+                                            <li>A team leader will be appointed for each team.</li>
+                                            <li>The team leader will maintain constant communication with the mentor.
+                                            </li>
+                                            <li>The team leader will monitor the progress of the project.</li>
+                                            <li>Frequent communication and progress updates with the mentor must be
+                                                ensured.</li>
+                                            <li>Tasks must be delegated among the team members to ensure each member
+                                                shares equal responsibility.</li>
+                                        </ul>
                                     </div>
-
-                                    <div class="item ">
-                                        <div class="testimony-slide active text-center ">
-                                            <blockquote>
-                                                <p>CodeRush 2020 is exclusive for the undergraduates of the Faculty of
-                                                    Information Technology.</p><br>
-                                                <p>The competition will be in action for 48 hours from the starting
-                                                    moment.</p><br>
-                                                <p>A team can only log into Hackerrank utilising the account and
-                                                    password sent by the Organising Committee.</p>
-                                            </blockquote>
-                                        </div>
-                                    </div>
-
-                                    <div class="item ">
-                                        <div class="testimony-slide active text-center ">
-                                            <blockquote>
-                                                <p>CodeRush 2020 is exclusive for the undergraduates of the Faculty of
-                                                    Information Technology.</p><br>
-                                                <p>The competition will be in action for 48 hours from the starting
-                                                    moment.</p><br>
-                                                <p>A team can only log into Hackerrank utilising the account and
-                                                    password sent by the Organising Committee.</p>
-                                            </blockquote>
-                                        </div>
-                                    </div>
-
                                 </div>
                             </div>
                         </div>
@@ -420,26 +422,62 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2>Prizes and Awards</h2>
-                        <p>“Tea with CTO” session for selected top 5 groups.</p>
+                        <h2>Benifits</h2>
+                        <p>“Tea with CTO” sessions for selected top 5 groups.</p>
                         <p>Arrange an interactive session with industry partners and share experience for further
                             development of the project.</p>
                     </div>
-
                 </div>
             </div>
         </div>
-        <hr>
 
-        <div id="fh5co-couple">
+        <div id="fh5co-gallery" class="fh5co-section-gray">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2>Contacts</h2>
-
+                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
+                        <h2>Get in Touch</h2>
                     </div>
                 </div>
-
+                <div class="row">
+                    <div class="container">
+                        <ul class="fh5co-social-icons text-center">
+                            <li data-animate-effect="fadeIn">
+                                <div class="col-md-12 text-center fh5co-heading animate-box fadeInUp animated-fast">
+                                    <h4>Anushka Praveen</h4>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">Vice President</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">ITFSU</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">+94 71 252 9942</span>
+                                </div>
+                            </li>
+                            <li data-animate-effect="fadeIn">
+                                <div class="col-md-12 text-center fh5co-heading animate-box fadeInUp animated-fast">
+                                    <h4>Lahiru Gayantha Subasinghe</h4>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">Secretary</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">ITFSU</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">+94 71 227 7158</span>
+                                </div>
+                            </li>
+                            <li data-animate-effect="fadeIn">
+                                <div class="col-md-12 text-center fh5co-heading animate-box fadeInUp animated-fast">
+                                    <h4>Chandeepa Pathirana</h4>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">Main Batch
+                                        Representative</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">Batch 18</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">+94 71 669 9661</span>
+                                </div>
+                            </li>
+                            <li data-animate-effect="fadeIn">
+                                <div class="col-md-12 text-center fh5co-heading animate-box fadeInUp animated-fast">
+                                    <h4>Prarthana Gamage</h4>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">Batch
+                                        Representative</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">Batch 18</span><br>
+                                    <span style="color: rgb(78, 77, 77);font-weight:bold;">+94 71 569 1718</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -450,7 +488,7 @@
                 <div class="row copyright ">
                     <div class="col-md-12 text-center ">
                         <p>
-                            <small class="block "> Copyright &copy; 2020 | Crafted by <a
+                            <small class="block "> Copyright &copy; 2021 | Crafted by <a
                                     href="http://intecs.itfac.mrt.ac.lk/ " style="color: rgb(42, 0, 97); "
                                     target="_blank ">Batch 18</a></small>
 
