Did some changes

--- a/index.html
+++ b/index.html
@@ -421,11 +421,61 @@
         <div id="fh5co-couple">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2>Benifits</h2>
-                        <p>“Tea with CTO” sessions for selected top 5 groups.</p>
-                        <p>Arrange an interactive session with industry partners and share experience for further
-                            development of the project.</p>
+                    <div class="row animate-box ">
+                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading ">
+                            <span>What you get in return</span>
+                            <h2>Benifits</h2>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-12 animate-box ">
+                            <div class="wrap-testimony ">
+                                <div class="item ">
+                                    <div class="testimony-slide active text-left ">
+                                        <h4>Tea With CTO</h4>
+                                        <ul>
+                                            <li>Most oustanding 5 project groups will selected for this session.
+                                            </li>
+                                            <li>This is an interactive session with industry partners and share
+                                                experience for further development of the project.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item ">
+                                    <div class="testimony-slide active text-left ">
+                                        <h4>Experiancing in current industry situation</h4>
+                                        <!-- <ul>
+                                            <li>Most oustanding 5 project groups will selected for this session.
+                                            </li>
+                                            <li>This is an interactive session with industry partners and share
+                                                experience for further development of the project.</li>
+                                        </ul> -->
+                                    </div>
+                                </div>
+                                <div class="item ">
+                                    <div class="testimony-slide active text-left ">
+                                        <h4>Get a chance to work with an industry proffetionals.</h4>
+                                        <!-- <ul>
+                                            <li>Most oustanding 5 project groups will selected for this session.
+                                            </li>
+                                            <li>This is an interactive session with industry partners and share
+                                                experience for further development of the project.</li>
+                                        </ul> -->
+                                    </div>
+                                </div>
+                                <div class="item ">
+                                    <div class="testimony-slide active text-left ">
+                                        <h4>Learn best practices in development.</h4>
+                                        <!-- <ul>
+                                            <li>Most oustanding 5 project groups will selected for this session.
+                                            </li>
+                                            <li>This is an interactive session with industry partners and share
+                                                experience for further development of the project.</li>
+                                        </ul> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -435,7 +485,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
-                        <h2>Get in Touch</h2>
+                        <span>Get in Touch</span>
+                        <h2>Contacts</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -451,7 +502,7 @@
                             </li>
                             <li data-animate-effect="fadeIn">
                                 <div class="col-md-12 text-center fh5co-heading animate-box fadeInUp animated-fast">
-                                    <h4>Lahiru Gayantha Subasinghe</h4>
+                                    <h4>Lahiru Gayantha</h4>
                                     <span style="color: rgb(78, 77, 77);font-weight:bold;">Secretary</span><br>
                                     <span style="color: rgb(78, 77, 77);font-weight:bold;">ITFSU</span><br>
                                     <span style="color: rgb(78, 77, 77);font-weight:bold;">+94 71 227 7158</span>
