--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
 
         <!-- end -->
 
+
+
+
+        <!--TimeLine-->
         <div id="fh5co-couple">
             <div class="container">
                 <div class="row ">
@@ -288,6 +292,7 @@
         </div>
         <hr>
 
+        <!--Development Path-->
         <div id="fh5co-testimonial " class="mt-sm-5">
             <div class="container mt-4">
                 <div class="row ">
@@ -381,6 +386,7 @@
             </div>
         </div>
 
+        <!--Rules and regulations-->
         <div id="fh5co-couple" class="fh5co-section-gray mt-5">
             <div class="container ">
                 <div class="row ">
@@ -410,6 +416,34 @@
                                         </ul>
                                     </div>
                                 </div>
+                                <div class="item ">
+                                    <div class="testimony-slide active text-left ">
+                                        <h4>Evaluation</h4>
+                                        <ul>
+                                            <li>Evaluation pocess is strictly based on development pathway. So please
+                                                follow the development pathway accordingly.
+                                            </li>
+                                            <li>Below evaluation criterias will be considered.
+                                                <ul>
+                                                    <li>Software development methodologies(Agile, Waterfall etc) </li>
+                                                    <li>UI Design/Wireframe(Adobe XD, Figma)</li>
+                                                    <li>Project Management tools(Jira, Trello, Clickup etc)</li>
+                                                    <li>Development Frameworkss</li>
+                                                    <li>Proper usage of libraries, ability to refer to the documentation
+                                                    </li>
+                                                    <li>Proper usage of StackOverflow</li>
+                                                    <li>Unit testing (Jest)</li>
+                                                    <li>Database handling(SQL, NoSQL)</li>
+                                                    <li>Version Controlling(Git, GitHub)</li>
+                                                    <li>Team collaboration</li>
+                                                    <li>Writing clean code / Following Design Patterns</li>
+                                                    <li>Communication Skills</li>
+                                                    <li>Time Frame Management</li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -417,7 +451,7 @@
             </div>
         </div>
 
-
+        <!--Benifits-->
         <div id="fh5co-couple">
             <div class="container">
                 <div class="row">
@@ -428,7 +462,11 @@
                         </div>
                     </div>
                     <div class="row ">
-                        <div class="col-md-12 animate-box ">
+                        <!-- <div id="fh5co-counter" class="col-md-6 fh5co-cover animate-box"
+                            style="background-image:url(images/benifits_raw_image.png);background-position: center center;">
+
+                        </div> -->
+                        <div class="col-md-6 animate-box ">
                             <div class="wrap-testimony ">
                                 <div class="item ">
                                     <div class="testimony-slide active text-left ">
@@ -481,6 +519,8 @@
             </div>
         </div>
 
+
+        <!--Contacts-->
         <div id="fh5co-gallery" class="fh5co-section-gray">
             <div class="container">
                 <div class="row">
@@ -532,7 +572,7 @@
             </div>
         </div>
 
-
+        <!--Footer-->
         <footer id="fh5co-footer" role="contentinfo">
             <div class="container">
 
@@ -542,7 +582,6 @@
                             <small class="block "> Copyright &copy; 2021 | Crafted by <a
                                     href="http://intecs.itfac.mrt.ac.lk/ " style="color: rgb(42, 0, 97); "
                                     target="_blank ">Batch 18</a></small>
-
                         </p>
 
                         <p>
@@ -558,6 +597,7 @@
 
             </div>
         </footer>
+
     </div>
 
     <div class="gototop js-top ">
