--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                                 <h1 class="topic-1">2021</h1>
                                 <h2 class="topic-2">Technical Skills Development Program</h2>
                                 <div class="simply-countdown simply-countdown-one "></div>
-                                <p><a href="# " class="btn btn-default btn-sm ">REGISTER NOW</a></p>
+                                <p><a href="https://docs.google.com/document/d/1Dlti4arHQyBW3keiCpgU-cEwP-2ul_YqM3K_1NOsE5k/edit?usp=sharing "
+                                        class="btn btn-default btn-sm ">REGISTER NOW</a></p>
 
                             </div>
                         </div>
@@ -502,7 +503,7 @@
         </div>
 
         <!--Benifits-->
-        <div id="fh5co-testimonial">
+        <div id="fh5co-couple2">
             <div class="container">
                 <div class="row">
                     <div class="row animate-box ">
@@ -516,7 +517,7 @@
                             <img width="500px" src="images/benifits_raw_image.png">
                         </div>
                         <div class="col-md-6 animate-box ">
-                            <div class="wrap-testimony ">
+                            <div class="wrap-testimony text-left">
                                 <div class="item ">
                                     <div class="testimony-slide active text-left ">
                                         <h4>Tea With CTO</h4>
