--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>{TechFlare} | 2021 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -119,9 +120,8 @@
                                 <h1 class="topic-1">2021</h1>
                                 <h2 class="topic-2">Technical Skills Development Program</h2>
                                 <div class="simply-countdown simply-countdown-one "></div>
-                                <p><a href="https://docs.google.com/document/d/1Dlti4arHQyBW3keiCpgU-cEwP-2ul_YqM3K_1NOsE5k/edit?usp=sharing "
+                                <p><a href="https://forms.gle/9LqW7dFnj2oFtEZJA" target="_blank"
                                         class="btn btn-default btn-sm ">REGISTER NOW</a></p>
-
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,9 @@
                                         <span class="date ">August 25, 2021</span>
                                     </div>
                                     <div class="timeline-body ">
-                                        <button class="btn btn-default ">Register Now</button>
+                                        <button class="btn btn-default "
+                                            onclick="location.href='https://forms.gle/9LqW7dFnj2oFtEZJA'">Register
+                                            Now</button>
                                     </div>
                                 </div>
                             </li>
@@ -702,7 +704,7 @@
         <script src="lib/wow/wow.min.js "></script>
         <script src="js/menu.js "></script>
         <script>
-            var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000);
+            var d = new Date(new Date().getTime() + 230 * 120 * 120 * 210);
 
             // default example
             simplyCountdown('.simply-countdown-one', {
