correct issues & add button

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <a href="#fh5co-couple" class=" nav-color">Rules</a>
                         </li>
                         <li>
-                            <a href="#fh5co-couple2" class=" nav-color">Benifits</a>
+                            <a href="#fh5co-couple2" class=" nav-color">Benefits</a>
 
                         </li>
                         <li><a href="#fh5co-testimonial" class=" nav-color">Contact</a></li>
@@ -313,7 +313,7 @@
                 <div class="row ">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box ">
                         <span>THE WAY YOU MUST FOLLOW</span>
-                        <h2>Development Path</h2>
+                        <h2>Development Pathway</h2>
                     </div>
                 </div>
                 <div class="row ">
@@ -483,7 +483,9 @@
                                             </li>
                                         </ul>
                                     </div>
+
                                 </div>
+                                <p><a href="https://tinyurl.com/TechFlare-Documents" target="_blank" style="margin-left:100px;margin-top:10px;" class="btn btn-default btn-sm ">REFERENCE</a></p>
                             </div>
                         </div>
                     </div>
@@ -512,7 +514,7 @@
                                     <div class="testimony-slide active text-left ">
                                         <h4>Tea With CTO</h4>
                                         <ul>
-                                            <li>Most outstanding 5 project groups will selected for this session.
+                                            <li>Most outstanding 5 project groups will be selected for this session.
                                             </li>
                                             <li>This is an interactive session with industry partners to share experiences and ideas for further development of the project.
                                             </li>
@@ -521,7 +523,7 @@
                                 </div>
                                 <div class="item ">
                                     <div class="testimony-slide active text-left ">
-                                        <h4>Opportunity to understand current trends and processes of the IT Industry.</h4>
+                                        <h4>Understand current trends and processes of the IT Industry.</h4>
                                         <!-- <ul>
                                             <li>Most oustanding 5 project groups will selected for this session.
                                             </li>
