--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <div class="row ">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box ">
                         <span>THE WAY YOU MUST FOLLOW</span>
-                        <h2>Development Pathway</h2>
+                        <h2>The Project Trail Guide</h2>
                     </div>
                 </div>
                 <div class="row ">
