--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
             <div class="container mt-4">
                 <div class="row ">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box ">
-                        <span>THE WAY YOU MUST FOLLOW</span>
-                        <h2>The Project Trail Guide</h2>
+                        <span>THE PROJECT TRAIL GUIDE</span>
+                        <h2>Development Pathway</h2>
                     </div>
                 </div>
                 <div class="row ">
