--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -235,7 +235,7 @@
     <script src="lib/wow/wow.min.js"></script>
     <script src="js/menu.js"></script>
     <script>
-        var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000);
+        var d = new Date(new Date().getTime() + 1530022400);
 
         // default example
         simplyCountdown('.simply-countdown-one', {
