Timer has removed

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                                 <img src="./images/logo.png" class="logo-main" />
                                 <h1 class="topic-1">2021</h1>
                                 <h2 class="topic-2">Technical Skills Development Program</h2>
-                                <div class="simply-countdown simply-countdown-one "></div>
+                                <!-- <div class="simply-countdown simply-countdown-one "></div>
                                 <p><a href="https://forms.gle/9LqW7dFnj2oFtEZJA" target="_blank"
-                                        class="btn btn-default btn-sm ">REGISTER NOW</a></p>
+                                        class="btn btn-default btn-sm ">REGISTER NOW</a></p> -->
                             </div>
                         </div>
                     </div>
@@ -198,9 +198,6 @@
         </div>
         <hr>
         <!-- end -->
-
-
-
 
         <!--TimeLine-->
         <div id="fh5co-couple3">
