Remove registration button from timeline

--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
                                         </span>
                                     </div>
                                     <div class="timeline-body ">
-                                        <button class="btn btn-default "
-                                            onclick="location.href='https://forms.gle/9LqW7dFnj2oFtEZJA'">REGISTER NOW
-                                        </button>
+                                        <!-- <button class="btn btn-default " -->
+                                        <!-- onclick="location.href='https://forms.gle/9LqW7dFnj2oFtEZJA'">REGISTER NOW -->
+                                        <!-- </button> -->
                                     </div>
                                 </div>
                             </li>
